aks-jenkins/templates/svc-default.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-clusterip
  namespace: jenkins
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: jenkins
