aks-jenkins/templates/svc-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: public-svc
  namespace: jenkins
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: jenkins
