aks-jenkins/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ajenkins.eastasia.cloudapp.azure.com
    secretName: jenkins-tls
  rules:
  - host: ajenkins.eastasia.cloudapp.azure.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: jenkins-clusterip
            port:
              number: 80
